force-app/main/default/objects/os_AML_Parameter__c/os_AML_Parameter__c.object-meta.xml
<CustomObject>
    <label>AML Parameter</label>
    <nameField>
        <label>AML Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AML Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>