force-app/main/default/objects/os_AML_Parameter__c/fields/os_FATF__c.field-meta.xml
<CustomField>
    <fullName>os_FATF__c</fullName>
    <label>FATF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>