force-app/main/default/objects/os_AML_Parameter__c/fields/os_Parameter_Value__c.field-meta.xml
<CustomField>
    <fullName>os_Parameter_Value__c</fullName>
    <label>Parameter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>