force-app/main/default/objects/os_AML_Parameter__c/fields/os_PEP_Sanctions__c.field-meta.xml
<CustomField>
    <fullName>os_PEP_Sanctions__c</fullName>
    <label>PEP &amp; Sanctions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>