force-app/main/default/objects/os_AML_Parameter__c/fields/os_Rating__c.field-meta.xml
<CustomField>
    <fullName>os_Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Sanctioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>