force-app/main/default/objects/os_AML_Parameter__c/fields/os_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>os_Risk_Score__c</fullName>
    <label>Risk Score</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>