force-app/main/default/objects/os_AML_Parameter__c/fields/os_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>