force-app/main/default/objects/os_AML_Parameter__c/fields/os_UAEIEC__c.field-meta.xml
<CustomField>
    <fullName>os_UAEIEC__c</fullName>
    <label>UAEIEC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>