force-app/main/default/objects/os_AML_Parameter__c/recordTypes/Business_Location.recordType-meta.xml
<RecordType>
    <fullName>Business_Location</fullName>
    <active>true</active>
    <label>Business Location</label>
</RecordType>