force-app/main/default/objects/os_AML_Parameter__c/recordTypes/Business_Work_Location.recordType-meta.xml
<RecordType>
    <fullName>Business_Work_Location</fullName>
    <active>true</active>
    <label>Business / Work Location</label>
</RecordType>