force-app/main/default/objects/os_AML_Parameter__c/recordTypes/Country_Of_Residence.recordType-meta.xml
<RecordType>
    <fullName>Country_Of_Residence</fullName>
    <active>true</active>
    <label>Country Of Residence</label>
</RecordType>