force-app/main/default/objects/os_AML_Parameter__c/recordTypes/Employment_Business_Industry.recordType-meta.xml
<RecordType>
    <fullName>Employment_Business_Industry</fullName>
    <active>true</active>
    <label>Employment/Business Industry</label>
</RecordType>