force-app/main/default/objects/os_AML_Parameter__c/recordTypes/Employment_Type.recordType-meta.xml
<RecordType>
    <fullName>Employment_Type</fullName>
    <active>true</active>
    <label>Employment Type</label>
</RecordType>