force-app/main/default/objects/os_AML_Parameter__c/recordTypes/Financial_Information_Documents.recordType-meta.xml
<RecordType>
    <fullName>Financial_Information_Documents</fullName>
    <active>true</active>
    <label>Financial Information Documents</label>
</RecordType>