force-app/main/default/objects/os_AML_Parameter__c/recordTypes/Other_Business.recordType-meta.xml
<RecordType>
    <fullName>Other_Business</fullName>
    <active>true</active>
    <label>Other Business</label>
</RecordType>