force-app/main/default/objects/os_AML_Parameter__c/recordTypes/PEP.recordType-meta.xml
<RecordType>
    <fullName>PEP</fullName>
    <active>true</active>
    <label>PEP</label>
</RecordType>