force-app/main/default/objects/os_AML_Parameter__c/recordTypes/Second_Nationality.recordType-meta.xml
<RecordType>
    <fullName>Second_Nationality</fullName>
    <active>true</active>
    <label>Second Nationality</label>
</RecordType>