force-app/main/default/objects/os_AML_Parameter__c/recordTypes/Source_Of_Fund.recordType-meta.xml
<RecordType>
    <fullName>Source_Of_Fund</fullName>
    <active>true</active>
    <label>Source Of Fund</label>
</RecordType>