force-app/main/default/objects/os_AML_Parameter__c/recordTypes/Year_of_Establishment.recordType-meta.xml
<RecordType>
    <fullName>Year_of_Establishment</fullName>
    <active>true</active>
    <label>Year of Establishment</label>
</RecordType>