force-app/main/default/objects/os_AML_Parameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>os_Rating__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>os_Type__c</columns>
    <columns>os_Risk_Score__c</columns>
    <columns>os_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>